k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Zhivko Kocev\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe --file .\docker-compose.yaml convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backend
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Zhivko Kocev\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe --file .\docker-compose.yaml convert
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: backend
    spec:
      containers:
        - env:
            - name: SPRING_JPA_HIBERNATE_DDL_AUTO
              value: update
          image: kocew/duck-game-backend:latest
          name: backend
      restartPolicy: Always
