k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: C:\Users\Zhivko Kocev\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe --file .\docker-compose.yaml convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  template:
    metadata:
      annotations:
        kompose.cmd: C:\Users\Zhivko Kocev\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe --file .\docker-compose.yaml convert
        kompose.version: 1.37.0 (fb0539e64)
      labels:
        io.kompose.service: frontend
    spec:
      containers:
        - image: frontend
          name: frontend
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
