k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: backend
  name: backend
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: backend
