k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "5432"
      port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: db
