k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: C:\Users\Zhivko Kocev\AppData\Local\Microsoft\WinGet\Packages\Kubernetes.kompose_Microsoft.Winget.Source_8wekyb3d8bbwe\kompose.exe --file .\docker-compose.yaml convert
    kompose.version: 1.37.0 (fb0539e64)
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: frontend
